--- a/src/app/mainsitecomponents/ApplicationHomePageComponents/section-top-nav/section-top-nav.component.css
+++ b/src/app/mainsitecomponents/ApplicationHomePageComponents/section-top-nav/section-top-nav.component.css
@@ -1,15 +1,20 @@
-
- .vis-mob{ display: none;}
- .hide-mob{display: block;}
+.vis-mob {
+  display: none;
+}
+.hide-mob {
+  display: block;
+}
 .navbar a:not(.btn):not(.dropdown-item) {
   color: lightgrey;
 }
-.container{
+.container {
   max-width: 1300px;
   padding-left: 5px;
 }
-.nav-link,.navbar {
-  padding: .5rem 0;
+.nav-link,
+.navbar {
+  padding: 0.5rem 0;
+  cursor: pointer;
 }
 .searchBtn {
   border-radius: 5px;
@@ -18,6 +23,7 @@
 .borderNav {
   padding-top: 10px;
 }
+
 .topsearchhide {
   /* visibility: hidden; */
   display: none;
@@ -33,7 +39,7 @@
 .navbar .navbar-collapse .nav-item a {
   color: black !important;
   font-weight: 200;
-  font-family: 'Maven Pro', sans-serif;
+  font-family: "Maven Pro", sans-serif;
   font-size: 13px;
   font-weight: 500;
 }
@@ -49,86 +55,92 @@
 .dropdown-menu {
   min-width: 5rem !important;
 }
-.drop-sub{
+.drop-sub {
   display: -webkit-box;
-   margin-left: -846px;
-   margin-top: -10px;
+  margin-left: -446px;
+  margin-top: -10px;
 }
-.dropdown-menu-sun-one{
+.dropdown-menu-sun-one {
   display: flex;
-  
 }
-.vis-moble{display: none;}
-@media only screen and (max-width: 768px){
-  .vis-moble{display: block;}
-  .sub-menu-03{
-    display: flex ;
+.vis-moble {
+  display: none;
+}
+@media only screen and (max-width: 768px) {
+  .vis-moble {
+    display: block;
+  }
+  .sub-menu-03 {
+    display: flex;
     flex-direction: column !important;
   }
-  .navbar .navbar-nav .nav-item:not(:last-child){
+  .navbar .navbar-nav .nav-item:not(:last-child) {
     padding-top: 0;
     margin-bottom: 0px;
   }
-  .navbar-nav .dropdown-menu:after{
+  .navbar-nav .dropdown-menu:after {
     right: inherit;
     top: 33px;
     left: 22px;
   }
-  .navbar-nav{
-  background: rgb(225 235 243);
+  .navbar-nav {
+    background: rgb(225 235 243);
   }
-  .nav-item.active.borderNav{
+  .nav-item.active.borderNav {
     display: none;
   }
-  .dropdown-menu-sun-one{
+  .dropdown-menu-sun-one {
     margin-left: 10px !important;
     margin-top: 0 !important;
     display: initial;
-    
   }
-  .vis-mob{ display: block;}
+  .vis-mob {
+    display: block;
+  }
   .vis-mob .btn-primary {
     font-size: 10px;
     padding: 10px;
-}
-#searchBarButton{
-  margin-left: 10px;
-}
-  .hide-mob{display: none;}
-  .drop-sub{
-    margin-left: 5px ;
-    margin-top: -10px ;
+  }
+  #searchBarButton {
+    margin-left: 10px;
+  }
+  .hide-mob {
+    display: none;
+  }
+  .drop-sub {
+    margin-left: 5px;
+    margin-top: -10px;
     flex-direction: column;
-    display: flex ;
+    display: flex;
   }
   .navbar-nav .dropdown-menu.drop-sub:after {
     left: 24px;
     top: 53px;
     right: inherit;
+  }
 }
+@media only screen and (max-width: 420px) {
+  .logo-nav {
+    margin-left: -55px;
+  }
 }
-@media only screen and (max-width: 420px){
-.logo-nav{
-  margin-left: -55px;
+@media only screen and (max-width: 380px) {
+  .logo-nav {
+    margin-left: -50px;
+  }
 }
+@media only screen and (max-width: 360px) {
+  .logo-nav {
+    margin-left: -20px;
+  }
 }
-@media only screen and (max-width: 380px){
-.logo-nav{
-  margin-left: -50px;
+@media only screen and (max-width: 340px) {
+  .logo-nav {
+    margin-left: -10px;
+  }
 }
-}
-@media only screen and (max-width: 360px){
-.logo-nav{
-  margin-left: -20px;
-}
-}
-@media only screen and (max-width: 340px){
-.logo-nav{
-  margin-left: -10px;
-}
-}
-@media only screen and (max-width: 300px){
-.logo-nav{
-  margin-left: 0px;
-}
+@media only screen and (max-width: 300px) {
+  .logo-nav {
+    margin-left: 0px;
+  }
 }
