--- a/src/app/mainsitecomponents/ApplicationHomePageComponents/section-top/section-top.component.css
+++ b/src/app/mainsitecomponents/ApplicationHomePageComponents/section-top/section-top.component.css
@@ -99,7 +99,7 @@
   .txtFreelance {
     font-weight: 900;
     font-family: "Maven Pro", sans-serif;
-    font-size: 26px;
+    font-size: 24px;
     margin-top: 5px;
     line-height: 45px;
   }
